syntax = "proto3";

package com.vsu001.ethernet.core;

option java_multiple_files = true;
option java_package = "com.vsu001.ethernet.core.model";
option java_outer_classname = "TokenTransferProto";

import "google/protobuf/timestamp.proto";

message TokenTransfer {
  // ERC20 token address
  string tokenAddress = 1;

  // Address of the sender
  string fromAddress = 2;

  // Address of the receiver
  string toAddress = 3;

  // Amount of tokens transferred (ERC20) / id of the token transferred (ERC721)
  // Requires user to cast to NUMERIC or FLOAT64
  string value = 4;

  // Transaction hash
  string transactionHash = 5;

  // Log index in the transaction receipt
  int64 logIndex = 6;

  // Timestamp of the block where this transfer was in
  google.protobuf.Timestamp blockTimestamp = 7;

  // Block number where this transfer was in
  int64 blockNumber = 8;

  // Hash of the block where this transfer was in
  string blockHash = 9;
}